Use noerror section instead of runtime bind

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -6,17 +6,12 @@ $terminal = ghostty
 $browser = xdg-open http://
 
 exec-once = hyprpm reload -n
-
-# add binds for plugins at runtime because hyprpm needs to load them first
-exec = hyprctl keyword bindr SUPER, SUPER_L, hyprexpo:expo, toggle
-
 exec-once = pipewire
 exec-once = hypridle
 exec-once = swaync
 exec-once = waybar-autoreload
 exec-once = hyprland-events
 exec-once = ntfyd-start
-
 exec-once = steam -silent
 
 # for some reason, audio doesn't work in certain apps if they are started too early
@@ -232,6 +227,10 @@ bindl = , XF86AudioNext, exec, playerctl next
 bind = $mainMod, L, exec, hyprlock
 bind = , Print, exec, pkill slurp || grim -g "$(slurp -d)" - | wl-copy
 bind = SHIFT, Print, exec, pkill hyprpicker || hyprpicker --autocopy --format=hex --no-fancy
+
+# hyprlang noerror true
+bind = $mainMod, SUPER_L, hyprexpo:expo, toggle
+# hyprlang noerror false
 
 windowrulev2 = suppressevent maximize, class:.*
 windowrulev2 = tile, initialTitle:Visual Paradigm
