Allow restarting hyprlock on crash

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -112,6 +112,7 @@ misc {
     vrr = 1
     font_family = JetBrains Mono
     splash_font_family = JetBrains Mono
+    allow_session_lock_restore = true
 }
 
 input {
