Update swaync config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -238,3 +238,11 @@ windowrulev2 = tile, initialTitle:Visual Paradigm
 windowrulev2 = opaque, class:(mpv|Firefox)
 
 layerrule = blur, waybar
+
+layerrule = blur, swaync-control-center
+layerrule = ignorezero, swaync-notification-window
+layerrule = ignorezero, swaync
+layerrule = ignorezero, swaync-control-center
+layerrule = blur, swaync-notification-window
+layerrule = animation appleEase, swaync-control-center
+layerrule = blur, swaync
