--- a/.config/swaync/config.json
+++ b/.config/swaync/config.json
@@ -26,27 +26,9 @@
   "keyboard-shortcuts": true,
   "image-visibility": "when-available",
   "transition-time": 200,
-  "hide-on-clear": false,
+  "hide-on-clear": true,
   "hide-on-action": true,
   "script-fail-notify": true,
-  "scripts": {
-    "example-script": {
-      "exec": "echo 'Do something...'",
-      "urgency": "Normal"
-    },
-    "example-action-script": {
-      "exec": "echo 'Do something actionable!'",
-      "urgency": "Normal",
-      "run-on": "action"
-    }
-  },
-  "notification-visibility": {
-    "example-name": {
-      "state": "muted",
-      "urgency": "Low",
-      "app-name": "Spotify"
-    }
-  },
   "widgets": [
     "inhibitors",
     "title",
@@ -58,8 +40,8 @@
   "widget-config": {
     "inhibitors": {
       "text": "Inhibitors",
-      "button-text": "Clear All",
-      "clear-all-button": true
+      "clear-all-button": true,
+      "button-text": "Clear All"
     },
     "title": {
       "text": "Notifications",
