--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -1,9 +1,9 @@
 # vim: filetype=hyprlang
 
 general {
-    lock_cmd = pidof hyprlock || hyprlock       # avoid starting multiple hyprlock instances.
-    before_sleep_cmd = loginctl lock-session    # lock before suspend.
-    after_sleep_cmd = hyprctl dispatch dpms on  # to avoid having to press a key twice to turn on the display.
+    lock_cmd = pidof hyprlock || until hyprlock; do :; done # avoid starting multiple hyprlock instances.
+    before_sleep_cmd = loginctl lock-session                # lock before suspend.
+    after_sleep_cmd = hyprctl dispatch dpms on              # to avoid having to press a key twice to turn on the display.
 }
 
 listener {
