--- a/.config/lsd/config.yaml
+++ b/.config/lsd/config.yaml
@@ -125,7 +125,7 @@ hyperlink: never
 
 # == Symlink arrow ==
 # Specifies how the symlink arrow display, chars in both ascii and utf8
-symlink-arrow: "⭢"
+symlink-arrow: "->"
 
 # == Header ==
 # Whether to display block headers.
