Switch menu to walker

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,6 +13,7 @@ exec-once = waybar-autoreload
 exec-once = hyprland-events
 exec-once = ntfyd-start
 exec-once = steam -silent
+exec-once = walker --gapplication-service
 
 # for some reason, audio doesn't work in certain apps if they are started too early
 # TODO: replace with a better solution
@@ -165,7 +166,7 @@ $mainMod = SUPER
 binde = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, pkill wofi || wofi
+bind = $mainMod, R, exec, walker --modules=applications,calc
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, N, exec, swaync-client --toggle-panel --skip-wait
