Fix automatic spotify closing

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,7 +24,7 @@ exec-once = sleep 10 && flatpak run org.signal.Signal
 
 # Spotify doesn't have a --minimized flag, so we wait for the window
 # and close it as soon as it appears
-exec-once = while [ "$(hyprctl dispatch closewindow spotify)" != "ok" ]; do sleep 0.1; done
+exec-once = while [ "$(hyprctl dispatch closewindow class:^spotify$)" != "ok" ]; do sleep 0.1; done
 
 env = XCURSOR_THEME, Adwaita
 env = XCURSOR_SIZE,24
