Migrate hyprland to nixos

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -2,29 +2,21 @@
 
 source = monitors.conf
 
-$terminal = ghostty
-$browser = xdg-open http://
+$terminal = uwsm app -- ghostty
+$browser = uwsm app -- xdg-open http://
 
 exec-once = hyprpm reload -n
-exec-once = pipewire
-exec-once = hypridle
-exec-once = swaync
-exec-once = waybar-autoreload
-exec-once = hyprland-events
-exec-once = ntfyd-start
-exec-once = steam -silent
-exec-once = walker --gapplication-service
 
-# for some reason, audio doesn't work in certain apps if they are started too early
-# TODO: replace with a better solution
-exec-once = sleep 10 && flatpak run com.discordapp.Discord --start-minimized
-exec-once = sleep 10 && flatpak run com.sindresorhus.Caprine
-exec-once = sleep 10 && flatpak run com.spotify.Client
-exec-once = sleep 10 && flatpak run org.signal.Signal
+exec-once = uwsm app -- swaync
+exec-once = uwsm app -- hyprland-events
+exec-once = uwsm app -- ntfyd-start
+exec-once = uwsm app -- walker --gapplication-service
 
-# Spotify doesn't have a --minimized flag, so we wait for the window
-# and close it as soon as it appears
-exec-once = while [ "$(hyprctl dispatch closewindow class:^spotify$)" != "ok" ]; do sleep 0.1; done
+exec-once = uwsm app -- steam -silent
+exec-once = uwsm app -- webcord --start-minimized
+exec-once = uwsm app -- caprine
+exec-once = uwsm app -- spotify
+exec-once = uwsm app -- signal-desktop
 
 env = XCURSOR_THEME, Adwaita
 env = XCURSOR_SIZE,24
@@ -142,6 +134,8 @@ gestures {
 
 ecosystem {
     no_donation_nag = true
+    no_update_news = true
+    enforce_permissions = true
 }
 
 experimental {
@@ -237,7 +231,7 @@ bind = $mainMod, SUPER_L, hyprexpo:expo, toggle
 
 windowrulev2 = suppressevent maximize, class:.*
 windowrulev2 = tile, initialTitle:Visual Paradigm
-windowrulev2 = opaque, class:(mpv|Firefox)
+windowrulev2 = opaque, class:(mpv|firefox)
 
 layerrule = blur, waybar
 
@@ -248,3 +242,5 @@ layerrule = ignorezero, swaync-control-center
 layerrule = blur, swaync-notification-window
 layerrule = animation appleEase, swaync-control-center
 layerrule = blur, swaync
+
+permission = /nix/store/[a-z0-9]{32}-grim-[0-9.]*/bin/grim, screencopy, allow
