--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -244,3 +244,4 @@ layerrule = animation appleEase, swaync-control-center
 layerrule = blur, swaync
 
 permission = /nix/store/[a-z0-9]{32}-grim-[0-9.]*/bin/grim, screencopy, allow
+permission = /nix/store/[a-z0-9]{32}-xdg-desktop-portal-hyprland-[0-9.]*/libexec/.xdg-desktop-portal-hyprland-wrapped, screencopy, allow
