Allow screen capture for hyprlock

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -244,4 +244,5 @@ layerrule = animation appleEase, swaync-control-center
 layerrule = blur, swaync
 
 permission = /nix/store/[a-z0-9]{32}-grim-[0-9.]*/bin/grim, screencopy, allow
+permission = /nix/store/[a-z0-9]{32}-hyprlock-[0-9.]*/bin/hyprlock, screencopy, allow
 permission = /nix/store/[a-z0-9]{32}-xdg-desktop-portal-hyprland-[0-9.]*/libexec/.xdg-desktop-portal-hyprland-wrapped, screencopy, allow
