Enable fingerprint login

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -9,6 +9,10 @@ general {
   ignore_empty_input = true
 }
 
+auth {
+  fingerprint:enabled = true
+}
+
 input-field {
   monitor =
   size = 200, 40
@@ -18,7 +22,7 @@ input-field {
   inner_color = $backgroundColor
   font_color = $fontColor
   placeholder_text =
-  fail_text =
+  fail_text = $PAMFAIL
   shadow_passes = 2
   shadow_size = 5
 }
