--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -128,7 +128,6 @@ input {
 }
 
 gestures {
-    workspace_swipe = true
     workspace_swipe_direction_lock = false
 }
 
@@ -246,3 +245,5 @@ layerrule = blur, swaync
 permission = /nix/store/[a-z0-9]{32}-grim-[0-9.]*/bin/grim, screencopy, allow
 permission = /nix/store/[a-z0-9]{32}-hyprlock-[0-9.]*/bin/hyprlock, screencopy, allow
 permission = /nix/store/[a-z0-9]{32}-xdg-desktop-portal-hyprland-[0-9.]*/libexec/.xdg-desktop-portal-hyprland-wrapped, screencopy, allow
+
+gesture = 3, horizontal, workspace
