--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -102,11 +102,12 @@ master {
 }
 
 misc {
-    force_default_wallpaper = 0
     vrr = 1
     font_family = JetBrains Mono
     splash_font_family = JetBrains Mono
     allow_session_lock_restore = true
+    disable_hyprland_logo = true
+    disable_splash_rendering = true
 }
 
 input {
