Refactor script management; add toggle-lights script

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -165,6 +165,7 @@ bind = $mainMod, F, fullscreen,
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, N, exec, swaync-client --toggle-panel --skip-wait
 bind = $mainMod SHIFT, N, exec, swaync-client --close-all && swaync-client --close-panel
+bind = $mainMod, T, exec, toggle-lights
 
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
